tests/NormalTests/paczka1/fuzzy1/70476603.err
Error in line 1: Sa9u S410 71,7
Error in line 7: ePR0JUh5a A799 3,3
Error in line 18: 6LeN4kQifBj A799 90,7
Error in line 4: ujht A799 2,9
Error in line 21: 6LeN4kQifBj S88 90,9
Error in line 34: ePR0JUh5a A799 21,3
Error in line 35: ePR0JUh5a A71 70,0
